--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,28 @@
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
     <script src="sketch.js"></script>
+    <style>
+      #legend {
+        /* width: 30%;
+        margin-top: 3%;
+        margin-left: 5%; */
+
+        width: 250px;
+        margin-left: 500px;
+        padding-top: 200px;
+        position: absolute;
+      }
+      #map {
+        width: 20%;
+        margin-left: 30%;
+        /* margin-top: 5%; */
+        position: absolute;
+      }
+    </style>
   </head>
   <body>
+    <img id='legend' src='wifi-legend.svg'>
+    <!-- <img id='map' src='map.png'> -->
     <main>
     </main>
   </body>
